--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "phpmailer/phpmailer": "^6.9",
         "shuchkin/simplexlsx": "^1.1",
-      "ext-pdo": "*"
+      "ext-pdo": "*",
+      "ext-mbstring": "*"
     }
 }
