--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
         "phpmailer/phpmailer": "^6.9",
         "shuchkin/simplexlsx": "^1.1",
       "ext-pdo": "*",
-      "ext-mbstring": "*"
+      "ext-mbstring": "*",
+        "dompdf/dompdf": "^3.0"
     }
 }
