--- a/src/Configuration/configNotes.json
+++ b/src/Configuration/configNotes.json
@@ -1,1 +1,1 @@
-{"barrier1":10,"barrier2":12}
+[{"barrier1":12,"barrier2":14},{"ingenieurR":112,"ingenieurF":34,"ingenieurTF":19,"managementR":82,"managementF":47,"managementTF":36}]
